# real-time-chat

./: CMakeLists.txt  README.md
client/: app.js  auth_helpers.js  emoji.js  index.html  style.css  temp_styles.css
server/: CMakeCache.txt  CMakeLists.txt  Makefile  auth.hpp  chat.db.old  chat_server.cpp  chat_server.hpp  cmake_install.cmake  db.cpp  db.hpp  main.cpp
server/server/: Makefile  cmake_install.cmake
